# zim-mcp-docker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.Docker.md  README.md  compose.yaml  pyproject.toml  requirements.txt
src/: server.py
src/zim_mcp/: __init__.py  config.py  content_extractor.py  models.py  search_engine.py  utils.py  zim_manager.py
