[project]
name = "zim-mcp"
version = "0.1.0"
description = "MCP server providing offline search capabilities through ZIM files"
readme = "README.md"
authors = [
    { name = "mobilemutex" }
]
requires-python = ">=3.13"
dependencies = [
    "libzim>=3.7.0",
    "fastmcp>=2.13.0",
    "pydantic>=2.12.0",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
