[project]
name = "zim-mcp"
version = "0.1.0"
description = "MCP server providing offline search capabilities through ZIM files"
readme = "README.md"
authors = [
    { name = "joeyboey" },
]
requires-python = ">=3.13"
dependencies = [
    "libzim>=3.7.0",
    "fastmcp>=2.13.0",
    "pydantic>=2.12.0",
    "markitdown[all]>=0.1.3",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
